--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@
            "content"
            "footer";
     grid-template-columns: 1fr;
-    grid-template-rows: 75px 1fr auto;
+    grid-template-rows: auto 1fr auto;
     grid-gap: 20px;
 }
 
@@ -27,8 +27,28 @@ header {
     grid-area: header;
 
     width: 100vw;
+    height: 65px;
     background-color: #333333;
     color: white;
+}
+
+button {
+    padding: 10px 10px;
+    background-color: white;
+    color: #333333;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+#array-setup {
+    margin-left: 2.5%;
+}
+
+button:hover {
+    background-color: whitesmoke;
+    /*color: white;*/
 }
 
 .flex-container {
@@ -41,9 +61,9 @@ header {
 }
 
 .alg-setup {
-    width: 50%;
+    width: 45%;
     /*min-width: 200px;*/
-    background-color: lightblue;
+    /*background-color: lightblue;*/
     flex-shrink: 0;
     align-self: center;
 }
@@ -55,14 +75,14 @@ header {
 
 .alg-select {
     width: 30%;
-    background-color: lightcoral;
+    /*background-color: lightcoral;*/
     flex-shrink: 0;
     align-self: center;
 }
 
 .alg-run {
     width: 10%;
-    background-color: aquamarine;
+    /*background-color: aquamarine;*/
     flex-shrink: 0;
     align-self: center;
 }
@@ -72,7 +92,7 @@ header {
 /*--- CONTENT ---*/
 .content-container {
     grid-area: content;
-    background-color: lightblue;
+    background-color: whitesmoke;
 }
 
 /*--- FOOTER ---*/
