Device Boundaries and Scaling formatted suitable for desktop and tablet/mobile proportions.

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,9 +4,9 @@
     padding: 0;
 
     font-family: "Open Sans", sans-serif;
-    /*font-size: large;
+    font-size: small;
     font-weight: bold;
-    text-transform: uppercase;*/
+    text-transform: uppercase;
 }
 
 .wrapper {
@@ -27,7 +27,8 @@ header {
     grid-area: header;
 
     width: 100vw;
-    height: 65px;
+    min-height: 65px;
+    height: auto;
     background-color: #333333;
     color: white;
 }
@@ -42,8 +43,8 @@ button {
     transition: all 0.3s ease 0s;
 }
 
-#array-setup {
-    margin-left: 2.5%;
+.alg-setup p {
+    margin-right: 2.5%;
 }
 
 button:hover {
@@ -52,16 +53,22 @@ button:hover {
 }
 
 .flex-container {
-    height: 65px;
+    width: 100vw;
+    min-height: 65px;
+    height: auto;
+
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     /*align-content: center;*/
+
+    /*margin-left: auto;
+    margin-right: auto;*/
 }
 
 .alg-setup {
-    width: 45%;
+    width: 430px;
     /*min-width: 200px;*/
     /*background-color: lightblue;*/
     flex-shrink: 0;
@@ -70,21 +77,35 @@ button:hover {
 
 .alg-setup p {
     display: inline-block;
-    padding-left: 2.5%;
+    /*margin-left: 2.5%;*/
 }
 
 .alg-select {
-    width: 30%;
+    width: 400px;
     /*background-color: lightcoral;*/
     flex-shrink: 0;
     align-self: center;
 }
 
-.alg-run {
+/*.alg-run {
     width: 10%;
-    /*background-color: aquamarine;*/
+    !*background-color: aquamarine;*!
     flex-shrink: 0;
     align-self: center;
+}*/
+
+/*mobile=600px tablet=992*/
+@media screen and (max-width: 992px) {
+    .alg-setup, .alg-select, .alg-run {
+        /*width: 100%;*/
+        padding: 5px 0px;
+        margin-left:auto;
+        margin-right:auto;
+    }
+
+    header {
+        padding: 5px 0px;
+    }
 }
 
 
