Dynamically added coloured div boxes and scaled properties according to viewport size.

--- a/style.css
+++ b/style.css
@@ -114,6 +114,9 @@ button:hover {
 .content-container {
     grid-area: content;
     background-color: whitesmoke;
+
+    width: auto;
+    /*margin: 0 auto;*/
 }
 
 /*--- FOOTER ---*/
